フォルダ構成の変更

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -3,7 +3,7 @@ html(lang='ja')
     head
         meta(charset="utf-8")
         title タイトル
-        link(href="/css/style.css", rel="stylesheet")
+        link(href="./css/style.css", rel="stylesheet")
     body
         div#header
         div#navigation
